# muek-TGLBoard

./: .gitignore  CMakeLists.txt  README.md  README_bricked.md  README_flash.md  README_floating_point_computation.md  README_runtime.md  README_textController.md  READMEpioMatrixOutput.md  READMEscrollText.md  platformio.ini
examples/: basic_frame.cpp  flash.cpp  framebuffer.cpp  scrollText.cpp  subframe.cpp
hardware/BOM/: TGL-Board_BOM.csv
hardware/KiCAD/: MatrixModule.kicad_sch  TGL_Board.kicad_pcb  TGL_Board.kicad_pro  TGL_Board.kicad_sch
hardware/Stand/: TGL-Board_Stand.3mf  TGL-Board_Stand.stl
hardware/gerber/: TGL_Board-B_Cu.gbl  TGL_Board-B_Mask.gbs  TGL_Board-B_Paste.gbp  TGL_Board-B_Silkscreen.gbo  TGL_Board-Edge_Cuts.gm1  TGL_Board-F_Cu.gtl  TGL_Board-F_Mask.gts  TGL_Board-F_Paste.gtp  TGL_Board-F_Silkscreen.gto  TGL_Board-NPTH-drl_map.gbr  TGL_Board-NPTH.drl  TGL_Board-PTH-drl_map.gbr  TGL_Board-PTH.drl
openOCD/: rp2040.cfg
src/: BeoCommon.cpp  BeoCommon.h  FireworkAnimation.cpp  FireworkAnimation.h  beo_common.cpp  beo_common.h  color.cpp  color.h  dinoGame.cpp  dinoGame.h  display_program.cpp  display_program.h  letters.h  main.cpp  pioMatrixOutput.cpp  pioMatrixOutput.h  scrollText.cpp  scrollText.h  snakeAI.cpp  snakeAI.h
src/BrightnessControl/: brightness_control.cpp  brightness_control.h
src/DinoGame/: dinoGame.cpp  dinoGame.h  dinogame_settings.h  enemy.cpp  enemy.h  entity.cpp  entity.h  player.cpp  player.h
src/DisplayText/: board_text_config.h  display_text.cpp  display_text.h
src/Firework/: firework.cpp  firework.h  firework_animation.cpp  firework_animation.h  firework_settings.h  pixel.cpp  pixel.h
src/FixedAnimation/: fixed_animation.cpp  fixed_animation.h
src/FixedAnimation/animations/: animations.cpp  animations.h  jump_animation.cpp
src/FlashController/: flash_controller.cpp  flash_controller.h
src/GameOfLife/: game_of_life_animation.cpp  game_of_life_animation.h
src/Menu/: menu_controller.cpp  menu_controller.h  menu_entry.cpp  menu_entry.h
src/MeteoriteAnimation/: meteorite_animation.cpp  meteorite_animation.h
src/PIOMatrixOutput/: color.cpp  color.h  pio_matrix_output.cpp  pio_matrix_output.h  pio_matrix_settings.h  pio_program.pio.h
src/RainbowAnimation/: rainbow_animation.cpp  rainbow_animation.h
src/ScrollText/: letters.h  scroll_text.cpp  scroll_text.h  static_text.cpp  static_text.h  text_controller.cpp  text_controller.h
src/SnakeAI/: food.cpp  food.h  hamiltonian_circle.cpp  hamiltonian_circle.h  snake.cpp  snake.h  snake_ai_animation.cpp  snake_ai_animation.h  snake_ai_settings.h
src/TetrisGame/: block.cpp  block.h  tetris.cpp  tetris.h  tetrisBlocks.h
src/TextController/: letters.h  scroll_text.cpp  scroll_text.h  static_text.cpp  static_text.h  text_controller.cpp  text_controller.h  tiny_text.cpp  tiny_text.h
src/TextController/charsets/: charset.cpp  charset.h  letters.cpp  letters.h  tiny_letters.cpp  tiny_letters.h
src/TextController/subcontroller/: static_subcontroller.cpp  static_subcontroller.h  subcontroller.cpp  subcontroller.h
src/c_sdk_lib/: asm_helper.S  double_aeabi.S  float_aeabi.S
